--- a/relativization.tex
+++ b/relativization.tex
@@ -4,9 +4,7 @@
 
 So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
-The first way is to say that the head is really not there. There is only a single element that is part of the relative clause and of the main clause. I call this the single element option. The second way is to say that the head is actually there, but that the head is there (at least in some point in the derivation) but it is phonologically empty. I call this the double element option.
-
-I discuss both these options for Modern German, and I show that they in principle both work. However, with the single element option, there is no way to derive Modern German from languages that behave differently, such as Polish. Therefore, I argue for the double element option.
+I interpret the missing head as: there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does.
 
 With this in mind, I argue for a similar analysis for OHG and Gothic. OHG and Gothic also independently show that they can be derived from a double element structure. This additional evidence for the double-headed structure is also exactly the reason why Modern German behave differently from the other two languages with respect to its case facts.
 
@@ -16,6 +14,132 @@ With this in mind, I argue for a similar analysis for OHG and Gothic. OHG and Go
 \section{Modern German}
 
 The basic pattern: a bigger internal case can license a smaller external case, not the other way around.
+
+
+
+
+\subsection{Deleted head story}
+
+\begin{itemize}
+  \item \tsc{wh}-elements are inside the relative clause
+  \begin{itemize}
+    \item Arguments come from extraposition, \tsc{wh}-elements are often found in the left periphery?, .. more?
+    \item \tsc{wh}-pronoun is in the relative clause, so therefore takes the relative clause case. From there it licenses the main clause case.
+  \end{itemize}
+  \item How does the pronoun license the main clause case?
+  \begin{itemize}
+    \item There is an external head that is deleted if it has a smaller case
+    \item The other way around does not work, because a small head cannot delete a big head
+  \end{itemize}
+  \item Arguments in favor of this head
+  \begin{itemize}
+    \item For headless relatives: it is needed to distinguish German from Polish
+    \item For relatives in general: there exist languages that have double heads
+  \end{itemize}
+  \item Where is this head?
+  \begin{itemize}
+    \item Somewhere where the relative pronoun can delete it: where it is c-commanded by the relative pronoun
+    \item Somewhere where it can receive case from the main clause
+    \item Where it normally is in SOV languages (does the thing in Polish move because it is a svo language?)
+  \end{itemize}
+  \item Illustrating this with German
+  \begin{itemize}
+    \item One example that works
+    \item One example that does not work
+  \end{itemize}
+\end{itemize}
+
+
+
+
+
+
+
+
+But if we follow the logic I just sketched, I expect all languages that have \tsc{wh}-pronouns as relative pronouns to allow for letting the internal case win in case competition. This prediction is incorrect. There are languages like Polish, which are so-called `strictly matching'. They always give an ungrammatical result when there is case competition (and not syncretism or two identical cases).
+
+\ex.
+\ag. Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
+Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
+`Jan likes whoever he teases.'
+\bg. Jan ufa \tbf{komu} \tbf{(kolwiek)} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
+ Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
+ `Jan trusts whoever he let into the house.'
+
+Under the grafting analysis, there is nothing that distinguishes Polish from Modern German, so there is no reason for the Polish example in X to be incorrect. The other one is ungrammatical, just as the German one, but the first one is too, and that is unexpected.
+
+Now I do not want to say that Polish and German differ in that Polish is `strictly matching' and Modern German is `more relaxed', that this is something construction- and language-specific. Instead, I let the distinction in headless relatives follow from something within the language. This something is their light-headed relatives.
+
+\ex. Polish light-headed relative
+
+\ex. German light-headed relative
+\a. das was
+\b. das das
+
+In German a sense of definiteness is added, because of the \tsc{d} in \tit{das}. In Polish that is not the case, because \tit{to} in Polish does not necessarily have definiteness. Evidence for that for Czech comes from Radek. I take that to exist for Polish as well.
+
+So, Polish can involve a second head (the light head) without changing the meaning of the construction. German cannot. Now it is important to note the timing of this `repair' strategy. This has to namely be in the course of the derivation, it cannot be something that is inserted `afterwards'. What I mean with this is that there needs to be an element (which is going to become the light head in Polish but not in German) that is available during the derivation. Depending on what this element looks like, Polish shows the light head.
+
+\ex. Polish
+\a. rel clause with \tsc{acc}
+\b. other element: \tsc{nom}
+\b. t, c
+
+\ex. German
+\a. rel clause with \tsc{acc}
+\b. other element: \tsc{nom}
+\b. w (because d would change the meaning)
+
+So, Polish has an `out', which German does not have.
+
+What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
+
+\exg. doü adiyano-no \tbf{doü} deyalukhe\\
+ sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
+ `The sago that they gave is finished.' \flushfill{Kombai, Dryer 2005}
+
+\exg. gana gu fali-kha \tbf{ro} na-gana-y-a\\
+ {bush knife} 2\tsc{sg} carry-go.\tsc{2sg}.\tsc{nonfut} my-{bush knife}-\tsc{tr-pred}\\
+ `The bush knife that you took away, is my bush knife.'
+
+\exg. yare gamo khereja bogi-n-o \tbf{rumu} na-momof-a\\
+ {old man} join.\tsc{ss} work \tsc{dur}.do.\tsc{3sg}.\tsc{nf}-\tsc{tr}-\tsc{conn} person my-uncle-\tsc{pred}\\
+ `The old man who is joining the work is my uncle.'
+
+
+\ex.
+\ag. Junya-wa[Ayaka-gamui-taringo]-otabe-ta.\\
+ Junya-topAyaka-nompeel-pastapple-acceat-past\\
+ ‘Junya ate the apples that Ayaka peeled.’
+\bg. Junya-wa[Ayaka-garingo-omui-ta-no]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-past-no-acceat-past\\
+ literally ‘Junya ate [that Ayaka peeled apples].’
+\bg. Junya-wa[Ayaka-garingo-omui-tasono-ringo]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-pastthat-apple-acceat-past\\
+ literally ‘Junya ate [those apples that Ayaka peeled apples].’
+
+
+\tit{as} is deleted because it cannot surface on its own? why not?
+
+what is this deletion to begin with?
+
+Finnish is like German because its light-headed relatives also add some definiteness.
+
+
+
+
+\section{OHG and Gothic}
+
+relative clause more complex: second head like in MG, deletion there
+
+main clause more complex: full double-headed structure, deletion of element in speccp
+
+
+
+
+
+
+\section{Alternative analyses}
 
 \subsection{Grafting story}
 
@@ -95,93 +219,7 @@ Now the relative clause is built first again, this time only including the nomin
 
 So, this seems to work fine. The assumptions you have to do in order to make this are the following. First, case is complex. Second, you can remerge an embedded node (grafting). For the first one I have argued in Chapter \ref{ch:decomposition}. The second one could use some additional argumentation. It is a mix between internal remerge (move) and external merge, namely external remerge. Other literature on multidominance and grafting, other phenomena. Problems: linearization, .. But even if fix all these theoretical problems, there is an empirical one.
 
-That is, I want to connect this behavior of Modern German headless relatives to the shape of its relative pronouns. These pronouns are \tsc{wh}-elements. The OHG and Gothic ones are not \tsc{wh}, they are \tsc{d}. Their relative pronouns look different, and so their headless relatives can also behave differently. In the next section I show how it follows that \tsc{d}-morphology gives both directions.
-
-Q: can I already make sense of why \tsc{wh}-morphology gives `internal only' as pattern?
-
-
-
-\subsection{Deleted head story}
-
-But if we follow the logic I just sketched, I expect all languages that have \tsc{wh}-pronouns as relative pronouns to allow for letting the internal case win in case competition. This prediction is incorrect. There are languages like Polish, which are so-called `strictly matching'. They always give an ungrammatical result when there is case competition (and not syncretism or two identical cases).
-
-\ex. give Polish examples
-\a.
-\b.
-
-Under the grafting analysis, there is nothing that distinguishes Polish from Modern German, so there is no reason for the Polish example in X to be incorrect. The other one is ungrammatical, just as the German one, but the first one is too, and that is unexpected.
-
-Now I do not want to say that Polish and German differ in that Polish is `strictly matching' and Modern German is `more relaxed', that this is something construction- and language-specific. Instead, I let the distinction in headless relatives follow from something within the language. This something is their light-headed relatives.
-
-\ex. Polish light-headed relative
-
-\ex. German light-headed relative
-\a. das was
-\b. das das
-
-In German a sense of definiteness is added, because of the \tsc{d} in \tit{das}. In Polish that is not the case, because \tit{to} in Polish does not necessarily have definiteness. Evidence for that for Czech comes from Radek. I take that to exist for Polish as well.
-
-So, Polish can involve a second head (the light head) without changing the meaning of the construction. German cannot. Now it is important to note the timing of this `repair' strategy. This has to namely be in the course of the derivation, it cannot be something that is inserted `afterwards'. What I mean with this is that there needs to be an element (which is going to become the light head in Polish but not in German) that is available during the derivation. Depending on what this element looks like, Polish shows the light head.
-
-\ex. Polish
-\a. rel clause with \tsc{acc}
-\b. other element: \tsc{nom}
-\b. t, c
-
-\ex. German
-\a. rel clause with \tsc{acc}
-\b. other element: \tsc{nom}
-\b. w (because d would change the meaning)
-
-So, Polish has an `out', which German does not have.
-
-What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
-
-\exg. doü adiyano-no \tbf{doü} deyalukhe\\
- sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
- `The sago that they gave is finished.' \flushfill{Kombai, Dryer 2005}
-
-\exg. gana gu fali-kha \tbf{ro} na-gana-y-a\\
- {bush knife} 2\tsc{sg} carry-go.\tsc{2sg}.\tsc{nonfut} my-{bush knife}-\tsc{tr-pred}\\
- `The bush knife that you took away, is my bush knife.'
-
-\exg. yare gamo khereja bogi-n-o \tbf{rumu} na-momof-a\\
- {old man} join.\tsc{ss} work \tsc{dur}.do.\tsc{3sg}.\tsc{nf}-\tsc{tr}-\tsc{conn} person my-uncle-\tsc{pred}\\
- `The old man who is joining the work is my uncle.'
-
-
-\ex.
-\ag. Junya-wa[Ayaka-gamui-taringo]-otabe-ta.\\
- Junya-topAyaka-nompeel-pastapple-acceat-past\\
- ‘Junya ate the apples that Ayaka peeled.’
-\bg. Junya-wa[Ayaka-garingo-omui-ta-no]-otabe-ta.\\
- Junya-topAyaka-nomapple-accpeel-past-no-acceat-past\\
- literally ‘Junya ate [that Ayaka peeled apples].’
-\bg. Junya-wa[Ayaka-garingo-omui-tasono-ringo]-otabe-ta.\\
- Junya-topAyaka-nomapple-accpeel-pastthat-apple-acceat-past\\
- literally ‘Junya ate [those apples that Ayaka peeled apples].’
-
-
-\tit{as} is deleted because it cannot surface on its own? why not?
-
-what is this deletion to begin with?
-
-Finnish is like German because its light-headed relatives also add some definiteness.
-
-
-
-
-\section{OHG and Gothic}
-
-relative clause more complex: second head like in MG, deletion there
-
-main clause more complex: full double-headed structure, deletion of element in speccp
-
-
-
-
-
-
+That is, I want to connect this behavior of Modern German headless relatives to the shape of its relative pronouns. These pronouns are \tsc{wh}-elements. The OHG and Gothic ones are not \tsc{wh}, they are \tsc{d}. Their relative pronouns look different, and so their headless relatives can also behave differently.
 
 
 
@@ -214,3 +252,329 @@ If Merge F has failed to spell out (even after backtracking), try to spawn a new
 \ex. Merge F, Move XP, Merge XP
 
 \phantom{hi}
+
+
+
+\section{Derivations for German}
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}
+
+Internal structure of the relative clause.
+
+\tit{w} got merged as a complex spec. \tsc{f1} and \tsc{f2} ended up there via backtracking: taking \tit{w} off, spec to spec movement, and spelling it out with the suffix.
+
+\ex.
+\begin{forest} boom
+[, s sep=50mm
+    [\tsc{relP}, s sep=20mm
+        [\tit{w}, roof]
+        [, s sep=30mm
+            [\tsc{deix}P,
+            tikz={
+            \node[label=below:\tit{e},
+            draw,circle,
+            scale=0.875,
+            fit to=tree]{};
+            }
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{n},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f2}]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{num}P
+                        [\tsc{num}]
+                        [\tsc{m}P
+                            [\tsc{m}]
+                            [\tsc{n}P
+                                [\tsc{n}]
+                                [\tsc{persP}
+                                    [\tsc{pers}]
+                                ]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+    [VP
+       [\tit{Maria mag}, roof]
+    ]
+]
+\end{forest}
+
+Structure of the relative clause + the external head that is going to be deleted.
+
+Case is merged above the relative clause. Backtracking takes place, meaning that the relative clause and the head are going to be split up again. Then it can be spelled out with the suffix of the head after spec-to-spec movement.
+
+\ex.
+\begin{forest} boom
+[\tsc{nom}P
+    [\tsc{f1}]
+        [, s sep=15mm
+        [CP
+            [\tsc{relP}
+                [\tit{w}, roof]
+                [
+                    [\tit{e}, roof]
+                    [\tit{n}, roof]
+                ]
+            ]
+            [VP
+               [\tit{Maria mag}, roof]
+            ]
+        ]
+        [, s sep=30mm
+            [\tsc{deix}P,
+        	  tikz={
+        	  \node[label=below:\tit{e},
+        	  draw,circle,
+        	  scale=0.875,
+        	  fit to=tree]{};
+            }
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+            [\tsc{num}P,
+        	  tikz={
+        	  \node[label=below:\tit{r},
+        	  draw,circle,
+        	  scale=0.9,
+        	  fit to=tree]{};
+            }
+                [\tsc{num}]
+                [\tsc{m}P
+                    [\tsc{m}]
+                    [\tsc{n}P
+                        [\tsc{n}]
+                        [\tsc{persP}
+                            [\tsc{pers}]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+
+\section{German deletion}
+
+
+So German relative pronoun:
+
+\begin{forest} boom
+[\tsc{relP}, s sep=20mm
+    [\tit{w}, roof]
+    [, s sep=30mm
+        [\tsc{deix}P,
+        tikz={
+        \node[label=below:\tit{e},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [\tsc{deix}]
+            [\tsc{refP}
+                [\tsc{ref2}]
+                [\tsc{ref1}]
+            ]
+        ]
+        [\tsc{acc}P,
+        tikz={
+        \node[label=below:\tit{n},
+        draw,circle,
+        scale=0.925,
+        fit to=tree]{};
+        }
+            [\tsc{f2}]
+            [\tsc{nom}P
+                [\tsc{f1}]
+                [\tsc{num}P
+                    [\tsc{num}]
+                    [\tsc{m}P
+                        [\tsc{m}]
+                        [\tsc{n}P
+                            [\tsc{n}]
+                            [\tsc{persP}
+                                [\tsc{pers}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+and German head:
+
+\begin{forest} boom
+[, s sep=30mm
+    [\tsc{deix}P,
+    tikz={
+    \node[label=below:\tit{e},
+    draw,circle,
+    scale=0.875,
+    fit to=tree]{};
+    }
+        [\tsc{deix}]
+        [\tsc{refP}
+            [\tsc{ref2}]
+            [\tsc{ref1}]
+        ]
+    ]
+    [\tsc{nom}P,
+    tikz={
+    \node[label=below:\tit{r},
+    draw,circle,
+    scale=0.9,
+    fit to=tree]{};
+    }
+        [\tsc{f1}]
+        [\tsc{num}P
+            [\tsc{num}]
+            [\tsc{m}P
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                    [\tsc{persP}
+                        [\tsc{pers}]
+                    ]
+                ]
+            ]
+        ]
+    ]
+]
+\end{forest}
+
+\section{Polish deletion}
+
+
+Polish relative pronoun
+
+\begin{forest} boom
+    [, s sep=40mm
+        [\tsc{rel}P,
+        tikz={
+        \node[label=below:\tit{k},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [\tsc{rel}]
+            [\tsc{persP}
+                [\tsc{pers}]
+                [\tsc{deix}P
+                    [\tsc{deix}]
+                    [\tsc{refP}
+                        [\tsc{ref2}]
+                        [\tsc{ref1}]
+                    ]
+                ]
+            ]
+        ]
+        [, s sep=30mm
+            [\tsc{m}P,
+            tikz={
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                ]
+            ]
+            [\tsc{dat}P,
+            tikz={
+            \node[label=below:\tit{mu},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f3}]
+                    [\tsc{acc}P
+                    [\tsc{f2}]
+                    [\tsc{nom}P
+                        [\tsc{f1}]
+                        [\tsc{num}P
+                            [\tsc{num}]
+                        ]
+                    ]
+                ]
+            ]
+        ]
+    ]
+\end{forest}
+
+Polish head
+
+\begin{forest} boom
+    [, s sep=30mm
+        [\tsc{pers}P,
+        tikz={
+        \node[label=below:\tit{k},
+        draw,circle,
+        scale=0.875,
+        fit to=tree]{};
+        }
+            [\tsc{pers}]
+            [\tsc{deix}P
+                [\tsc{deix}]
+                [\tsc{refP}
+                    [\tsc{ref2}]
+                    [\tsc{ref1}]
+                ]
+            ]
+        ]
+        [, s sep=20mm
+            [\tsc{m}P,
+            tikz={
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{m}]
+                [\tsc{n}P
+                    [\tsc{n}]
+                ]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{go},
+            draw,circle,
+            scale=0.925,
+            fit to=tree]{};
+            }
+                [\tsc{f2}]
+                [\tsc{nom}P
+                    [\tsc{f1}]
+                    [\tsc{num}P
+                        [\tsc{num}]
+                    ]
+                ]
+            ]
+        ]
+    ]
+\end{forest}
