--- a/variation.tex
+++ b/variation.tex
@@ -77,9 +77,9 @@ Examples in which the internal case is nominative, the external case is dative a
 he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
 `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
-Enti	aer	ant	uurta	demo	zaimo	sprah
-und	er, sie, es	antworten	der, die, das	zu	er, sie, es	sprechen, reden, sagen
-MASC.SG.NOM.3	IND.PAST.SG.3	MASC.SG.DAT		MASC.SG.DAT.3	IND.PAST.SG.3
+Enti aer ant uurta demo zaimo sprah
+und er, sie, es antworten der, die, das zu er, sie, es sprechen, reden, sagen
+MASC.SG.NOM.3 IND.PAST.SG.3 MASC.SG.DAT  MASC.SG.DAT.3 IND.PAST.SG.3
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
@@ -115,9 +115,10 @@ internal: dat, external: nom
 
 internal: dat, external: acc
 
-Themo	avur	tház	ni	gidúat	,	quimit	séragaz	muat	,	joh	wónot	inan	úbari	gotes	ábulgi	!
-dieser, der(selbe); diese, die; dieses, das	aber, (je)doch, dagegen	dieser, der(selbe); diese, die; dieses, das	nicht	tun, machen		kommen, (her)ankommen, zurück-	traurig, betrübt	Seele, Herz, Gemüt		und, auch	wohnen, sich befinden	er, sie, es	über	Gott	(Jäh)zorn
-MASC.SG.DAT		NEUT.SG.ACC		IND.PRES.SG.3		IND.PRES.SG.3	POS.NEUT.SG.NOM.ST	SG.NOM			IND.PRES.SG.3	MASC.SG.ACC.3		SG.GEN	SG.NOM
+\exg. Themo avur tház ni gidúat, quimit séragaz muat, joh wónot inan úbari gotes ábulgi!\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} dagegen \tsc{dem}.\tsc{acc}.\tsc{n}.\tsc{sg} not tun/machen.3\tsc{sg} kommen/herankommen/zurück-.3\tsc{sg} sad.\tsc{nom}.\tsc{sg} heart.\tsc{nom}.\tsc{sg} and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} über god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
+`'
+
 
 Otfr.Ev.2.13.37
 
